<resources>
    <string name="app_name">CartoPuntos</string>
    <string name="nombre_de_usuario">Nombre De Usuario</string>
    <string name="email">Email</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="contrase_a">Contraseña</string>
    <string name="carto_puntos">Carto Puntos</string>
    <string name="iniciar_sesion">iniciar Sesion</string>
    <string name="flecha_para_volver_hacia_atras">flecha para volver hacia atras</string>
    <string name="no_tienes_cuenta_crear_cuenta">¿No tienes cuenta? Crear cuenta</string>
    <string name="selecciona_el_juego_al_que_deseas_jugar">Selecciona el juego al que deseas jugar</string>
    <string name="boton_que_te_dejara_juagar_al_mus">boton que te dejara juagar al mus</string>
    <string name="boton_que_te_dejara_juagar_a_magic">boton que te dejara juagar a magic</string>
    <string name="mus">MUS</string>
    <string name="boton_que_te_lleva_al_usuario">boton que te lleva al usuario</string>
    <string name="recuerdame">Recuerdame</string>
    <string name="mantener_sesi_n_iniciada">Mantener sesión iniciada</string>
    <string name="usuario">Usuario</string>
    <string name="plantillas">Plantillas</string>
    <string name="total_plantillas">Total plantillas:</string>
    <string name="email_2">Email:</string>
    <string name="boton_para_cerrar_sesion">boton para cerrar sesion</string>
    <string name="total_de_partidas">Total de partidas:</string>
    <string name="boton_para_volver_atras">boton para volver atras</string>
    <string name="contadorPartidas">0</string>
    <string name="separadorPArtidas">:</string>
    <string name="boton_para_abrir_el_menu_de_la_partida">Boton para abrir el menu de la partida</string>
    <string name="boton_para_abrir_el_meni_reiniciar_la_partida">Boton para abrir el meni reiniciar la partida</string>
    <string name="jugador">Jugador</string>
    <string name="_0">0</string>
    <string name="mas">+</string>
    <string name="logo_de_la_app_carto_puntos">Logo de la app Carto Puntos</string>
    <string name="jugador_1">Jugador 1</string>
    <string name="puntosJugador1">0</string>
    <string name="jugador1">Jugador 1</string>
    <string name="jugador_2">Jugador 2</string>
    <string name="jugador3">Jugador 3</string>
    <string name="jugador__1">Jugador 1</string>
    <string name="jugador_4">Jugador 4</string>
    <string name="puntosJug1">0</string>
    <string name="menos">-</string>
    <string name="puntosJug2">0</string>
    <string name="puntosJug3">0</string>
    <string name="puntosJug4">0</string>
    <string name="icono_de_usuario_del_jugador_1">icono de usuario del jugador 1</string>
    <string name="icono_de_usuario_del_jugador_2">icono de usuario del jugador 2</string>
    <string name="icono_de_usaurio_jugador_3">icono de usaurio jugador 3</string>
    <string name="icono_de_usuario_del_jugador_4">icono de usuario del jugador 4</string>
    <string name="boton_para_el_menu_de_dados_virtuales">boton para el menu de dados virtuales</string>
    <string name="jugador_6">Jugador 6</string>
    <string name="puntosJug6">0</string>
    <string name="jugador_5">Jugador 5</string>
    <string name="puntosJug5">0</string>
    <string name="icono_de_usuario_5">Icono de usuario 5</string>
    <string name="icono_de_usaurio_jugador_6">Icono de usaurio jugador 6</string>
    <string name="jugador_7">Jugador 7</string>
    <string name="icono_de_usuario_jugador_7">Icono de usuario jugador 7</string>
    <string name="puntosJug7">0</string>
    <string name="jugador_8">Jugador 8</string>
    <string name="puntosJug8">0</string>
    <string name="icono_de_usuario_de_el_jugador_8">Icono de usuario de el jugador 8</string>
    <string name="boton_para_volver_artras">Boton para volver artras</string>
    <string name="reiniciar_partida">Reiniciar Partida</string>
    <string name="declarar_ganador">Declarar Ganador</string>
    <string name="cantidad_de_rondas_para_ganar">Cantidad de rondas para ganar:</string>
    <string name="ajustes_del_juego">Ajustes del Juego</string>
    <string name="confirmar">Confirmar</string>
    <string name="configuraci_n">Configuración</string>
    <string name="notificar_con_sonido_al_morir">Notificar con sonido al morir</string>
    <string name="permitir_vida_negativa">Permitir vida negativa</string>
    <string name="auto_reiniciar_si_queda_1_vivo">Auto-reiniciar si queda 1 vivo</string>
    <string name="aplicar">Aplicar</string>
    <string name="cambiar_la_cantidad_de_jugadores">Cambiar la cantidad de jugadores.</string>
    <string name="d2">D2</string>
    <string name="d3">D3</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d16">D16</string>
    <string name="d20">D20</string>
    <string name="d_x">D(X)</string>
    <string name="menu_de_dados">Menu de dados</string>
    <string name="ser_el_monarca">Ser el Monarca</string>
    <string name="tomar_la_iniciativa">Tomar la Iniciativa</string>
    <string name="cambiar">Cambiar</string>
    <string name="estado_d_a_noche">Estado Día/Noche:</string>
    <string name="d_a">Día</string>
    <string name="_1_1">+1/+1:</string>
    <string name="veneno">Veneno:</string>
    <string name="tesoros">Tesoros:</string>
    <string name="energ_a">Energía:</string>
    <string name="veneno_cont">0</string>
    <string name="tesoro_cont">0</string>
    <string name="energia_cont">0</string>
    <string name="mas_uno_mas_uno_cont">0</string>
    <string name="comandante">Comandante</string>
    <string name="crear_nueva_plantilla">Crear nueva plantilla</string>
    <string name="guardar_perfil">Guardar Perfil</string>
    <string name="seleccionar_fondo">Seleccionar Fondo</string>
    <string name="seleccionar_foto_de_perfil">Seleccionar Foto de Perfil</string>
    <string name="nombre_del_jugador">Nombre del jugador</string>
    <string name="imagne_de_fondo_del_taptete">Imagne de fondo del taptete</string>
    <string name="imagen_de_foto_de_perfil">Imagen de foto de perfil</string>
    <string name="vista_previa_de_plantilla">Vista Previa de Plantilla</string>
    <string name="crear_plantilla">Crear Plantilla</string>
    <string name="imagen_del_fondo_del_tapete">Imagen del fondo del tapete</string>
    <string name="fondo_escogido_por_el_jugador">fondo escogido por el jugador</string>
    <string name="eliminar">Eliminar</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="guardar_partida">Guardar Partida</string>
    <string name="partida_1">Partida 1</string>
    <string name="retomar">Retomar</string>
    <string name="borrar">Borrar</string>
    <string name="da_o_por_comandante">Daño por comandante</string>
    <string name="menu_de_indromacion">menu de indromacion</string>
    <string name="reglas_del_mus">Reglas del Mus</string>
    <string name="reglas_de_magic">Reglas de Magic</string>
</resources>