<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/cp_light_primary">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminate="true"
        android:layout_alignParentTop="true"/>


    <!-- Campo de nombre -->
    <EditText
        android:id="@+id/etNombreJugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_del_jugador"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        android:autofillHints="" />

    <!-- Botón para elegir foto de perfil -->
    <Button
        android:id="@+id/btnElegirFotoPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cp_light_button"
        android:text="@string/seleccionar_foto_de_perfil"
        android:layout_marginTop="16dp"/>

    <!-- Vista previa de la foto de perfil -->
    <ImageView
        android:id="@+id/imgVistaPreviaPerfil"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/placeholder_image"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagen_de_foto_de_perfil" />

    <!-- Botón para elegir fondo -->
    <Button
        android:id="@+id/btnElegirFondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cp_light_button"
        android:text="@string/seleccionar_fondo"
        android:layout_marginTop="16dp"/>

    <!-- Vista previa del fondo -->
    <ImageView
        android:id="@+id/imgVistaPreviaFondo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/placeholder_image"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagen_del_fondo_del_tapete" />

    <!-- Botón para guardar -->
    <Button
        android:id="@+id/btnGuardarPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_perfil"
        android:background="@color/cp_light_button"
        android:layout_marginTop="16dp"/>

</LinearLayout>
